tests/compile_pass/arith_main.mtl
fn main() -> int {
    let base = 4
    let extra = 3
    base + extra
}
