tests/compile_fail/type_mismatch.mtl
fn main() -> int {
    let value: int = "oops"
    value
}
